apps/eu/foobar/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foobar-http
spec:
  routes:
    - kind: Rule
      match: Host(`foobar-eu.cloud.local`) || PathPrefix(`/foobar-eu`)
      services:
        - name: foobar
          port: 80
      middlewares:
        - name: redirect-scheme-permanent
          namespace: traefik-system
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foobar-https
spec:
  routes:
    - kind: Rule
      match: Host(`foobar-eu.cloud.local`) || PathPrefix(`/foobar-eu`)
      services:
        - name: foobar
          port: 80
